change UML diagram

--- a/html/class_base_signal_processor.html
+++ b/html/class_base_signal_processor.html
@@ -316,7 +316,7 @@ Protected Attributes</h2></td></tr>
 <p>Method for saving the histogram bins to an output file</p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">file_name</td><td></td></tr>
+    <tr><td class="paramname">file_name</td><td>target directory for saving the histogram. </td></tr>
   </table>
   </dd>
 </dl>
@@ -350,7 +350,7 @@ Protected Attributes</h2></td></tr>
 </div><div class="memdoc">
 <p>Method for saving a given file. </p><dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">filename</td><td></td></tr>
+    <tr><td class="paramname">filename</td><td>target directory for saving the time signal. </td></tr>
   </table>
   </dd>
 </dl>
@@ -374,7 +374,7 @@ Protected Attributes</h2></td></tr>
 </div><div class="memdoc">
 <p>Overloaded function for setting the time signal (in this case from an AudioFile&lt;double&gt; variable). </p><dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">signal</td><td>input signal </td></tr>
+    <tr><td class="paramname">signal</td><td>input signal as an AudioFile object </td></tr>
   </table>
   </dd>
 </dl>
@@ -398,7 +398,7 @@ Protected Attributes</h2></td></tr>
 </div><div class="memdoc">
 <p>Overloaded function for setting the time signal (in this case from a vector&lt;double&gt; variable). </p><dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">signal</td><td>input signal </td></tr>
+    <tr><td class="paramname">signal</td><td>input signal as a vector&lt;double&gt; </td></tr>
   </table>
   </dd>
 </dl>
