fix label for output

--- a/html/class_fourier_transform.html
+++ b/html/class_fourier_transform.html
@@ -590,7 +590,7 @@ Private Attributes</h2></td></tr>
 <p>Function for save result in the separate file </p><dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
     <tr><td class="paramname">filename</td><td>path to the file </td></tr>
-    <tr><td class="paramname">output_param</td><td>the parameter, that you want to print: clean frequency, frequency, signal, clean signal </td></tr>
+    <tr><td class="paramname">output_param</td><td>the parameter, that you want to print: CleanFrequency, Frequency, Signal, CleanSignal </td></tr>
   </table>
   </dd>
 </dl>
